[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "merkletreelib"
path = "src/lib.rs"

[[bin]]
name = "merkletree"
path = "src/main.rs"


[dependencies]
digest = "0.10.6"
hex = "0.3.2"
sha2 = "0.10.6"